--- a/css/style.css
+++ b/css/style.css
@@ -469,51 +469,49 @@ body.dark-theme{
     margin-right: 5.5rem;
     cursor: pointer;
 }
-.btn-con{
+.btn-con {
     display: flex;
     align-self: flex-start;
-
-}
-.main-btn{
-    border-radius: 40px;
+  }
+  
+  .main-btn {
+    border-radius: 30px;
     color: inherit;
     font-weight: 600;
     position: relative;
     border: 1px solid var(--clr-accent);
-    align-self: flex-start;
     display: flex;
+    align-self: flex-start;
     align-items: center;
     overflow: hidden;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-weight: var(--fw-bold);
-    
-}
-.btn-text{
+  }
+  .main-btn .btn-text {
     padding: 0 2rem;
-}
-.btn-icon{
+  }
+  .main-btn .btn-icon {
     background-color: var(--clr-accent);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     padding: 1rem;
-}
-
-.btn-con::before{
+  }
+  .main-btn::before {
     content: '';
     position: absolute;
     top: 0;
     right: 0;
-    transform: translateX(-100%);
-    transition: all 2000ms ease-in;
+    transform: translateX(100%);
+    transition: all 0.4s ease-in;
     z-index: -1;
-}
-.main-btn:hover,
-.main-btn::before{
+  }
+  .main-btn:hover {
+    transition: all 0.4s ease-in;
+  }
+  .main-btn:hover::before {
     width: 100%;
     height: 100%;
     background-color: var(--clr-accent);
-    transform: translateX(0%);
-}
+    transform: translateX(0);
+    transition: all 0.4s ease-in;
+  }
