--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,8 @@ body.dark-theme{
     align-self: flex-start;
     align-items: center;
     overflow: hidden;
+    text-decoration: none;
+
   }
   .main-btn .btn-text {
     padding: 0 2rem;
