updated index and css file

--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,83 @@
+/* Color Variables */
+:root {
+    --color-light: #fff;
+    --color-dark: #303030;
+    --color-accent: #16e0bd;
+    --color-dark-theme-light: #303030;
+    --color-dark-theme-dark: #fff;
+    --color-dark-theme-accent: #16e0be;
+}
+
+/* General Styles */
 *,
 *::before,
-*::after{
+*::after {
     box-sizing: border-box;
 }
 
-/* customer properties, update these for your own design*/
-:root{
+/* Customer Properties, Update These for Your Own Design */
+:root {
     --ff-primary: 'Source Sans Pro', sans-serif;
     --ff-secondary: 'Source Sans Pro', monospace;
     --fw-reg: 300;
-    --fw-bold:900;
-
-    --clr-light:#fff;
-    --clr-dark:#303030;
-    --clr-accent: #16e0bd;
+    --fw-bold: 900;
 
     --fs-h1: 3rem;
     --fs-h2: 2.25rem;
     --fs-h3: 1.25rem;
     --fs-body: 1rem;
 
-    --bs: 0.25em 0.25em 0.75em rgb(0,0,0,.25),
-        0.125em 0.125em 0.25em rgba(0,0,0,.15);
+    --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
+        0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
 }
 
-@media (min-width: 800px){
-:root {
-    --fs-h1: 4.5rem;
-    --fs-h2: 3.75rem;
-    --fs-h3: 1.5rem;
-    --fs-body: 1.125rem;
+@media (min-width: 800px) {
+    :root {
+        --fs-h1: 4.5rem;
+        --fs-h2: 3.75rem;
+        --fs-h3: 1.5rem;
+        --fs-body: 1.125rem;
+    }
 }
 
-}
-/*general styles*/
-html{   
-     scroll-behavior: smooth;
+/* General Styles */
+html {
+    scroll-behavior: smooth;
 }
 
-body{
-    background:var(--clr-light);
-    color: var(--clr-dark);
+body {
+    background: var(--color-light);
+    color: var(--color-dark);
     margin: 0;
     font-family: var(--ff-primary);
     font-size: var(--fs-body);
     line-height: 1.6;
 }
 
-section{
+section {
     padding: 5em 2em;
 }
-img{
+
+img {
     display: block;
     max-width: 100%;
 }
 
-strong{font-weight: var(--fw-bold);}
+strong {
+    font-weight: var(--fw-bold);
+}
 
-:focus{
-    outline: 3px solid var(--clr-accent);
+:focus {
+    outline: 3px solid var(--color-accent);
     outline-offset: 3px;
 }
 
-
-
-/* buttons */
-.btn{
+/* Buttons */
+.btn {
     display: inline-block;
     padding: .5em 2.5em;
-    background: var(--clr-accent);
-    color: var(--clr-dark);
+    background: var(--color-accent);
+    color: var(--color-dark);
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
@@ -78,81 +86,87 @@ strong{font-weight: var(--fw-bold);}
     font-weight: var(--fw-bold);
     transition: transform 200ms ease-in-out;
 }
-.btn:hover{
+
+.btn:hover {
     transform: scale(1.1);
 }
 
-
-
-
-
-
-/*typography*/
-
+/* Typography */
 h1,
 h2,
-h3{
-line-height: 1;
-margin: 0;
-
-}
-h1{ font-size: var(--fs-h1);}
-h2{ font-size: var(--fs-h2);}
-h3{ font-size: var(--fs-h3);}
-
-.section__title{
-margin-bottom: .25em;
+h3 {
+    line-height: 1;
+    margin: 0;
 }
 
-.section__title--intro{
+h1 {
+    font-size: var(--fs-h1);
+}
+
+h2 {
+    font-size: var(--fs-h2);
+}
+
+h3 {
+    font-size: var(--fs-h3);
+}
+
+.section__title {
+    margin-bottom: .25em;
+}
+
+.section__title--intro {
     font-weight: var(--fw-reg);
 }
-.section__title--intro strong{
+
+.section__title--intro strong {
     display: block;
 }
-.section__subtitle{
+
+.section__subtitle {
     margin: 0;
     font-size: var(--fs-h3);
 }
+
 .section__subtitle--intro,
-.section__subtitle--about{
-    background: var(--clr-accent);
+.section__subtitle--about {
+    background: var(--color-accent);
     padding: .25em 1em;
     font-family: var(--ff-secondary);
     margin-bottom: 1em;
 }
-.section__subtitle--work{
-    color: var(--clr-accent);
+
+.section__subtitle--work {
+    color: var(--color-accent);
     font-weight: var(--fw-bold);
     margin-bottom: 2em;
 }
 
-/* header */
+/* Header */
 header {
     display: flex;
     justify-content: space-between;
     padding: 1em;
 }
 
-
-
-.logo{
+.logo {
     max-width: 100px;
 }
 
-.nav{
-    background: var(--clr-dark);
+.nav {
+    background: var(--color-dark);
     position: fixed;
-    color: var(--clr-light);
+    color: var(--color-light);
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 100;
     transform: translateX(100%);
-    transition: transform 250ms cubic-bezier(.5,0,.5,1);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
-.nav__list{
+
+.nav__list {
     list-style: none;
     display: flex;
     height: 100%;
@@ -162,17 +176,19 @@ header {
     margin: 0;
     padding: 0;
 }
-.nav__link{
+
+.nav__link {
     color: inherit;
     font-weight: var(--fw-bold);
     font-size: var(--fs-h2);
     text-decoration: none;
+}
 
+.nav__link:hover {
+    color: var(--color-accent);
 }
-.nav__link:hover{
-    color: var(--clr-accent);
-}
-.nav-toggle{
+
+.nav-toggle {
     padding: .5em;
     background: transparent;
     border: 0;
@@ -182,138 +198,90 @@ header {
     top: 1em;
     z-index: 1000;
 }
-.nav-open .nav
-{
-transform: translateX(0);
+
+.nav-open .nav {
+    transform: translateX(0);
 }
 
-.nav-open .nav-toggle{
+.nav-open .nav-toggle {
     position: fixed;
 }
-.nav-open .hamburger{
+
+.nav-open .hamburger {
     transform: rotate(.625turn);
 }
-.nav-open .hamburger::before{
+
+.nav-open .hamburger::before {
     transform: rotate(90deg) translateX(-6px);
 }
 
-.nav-open .hamburger::after{
+.nav-open .hamburger::after {
     opacity: 0;
 }
-.hamburger{
+
+.hamburger {
     display: block;
     position: relative;
 }
+
 .hamburger,
 .hamburger::before,
-.hamburger::after{
-    background: var(--clr-accent);
+.hamburger::after {
+    background: var(--color-accent);
     width: 2em;
     height: 3px;
     border-radius: 1em;
     transition: transform 250ms ease-in-out;
-
 }
 
 .hamburger::before,
-.hamburger::after{
+.hamburger::after {
     content: '';
     position: absolute;
     left: 0;
     right: 0;
 }
 
-.hamburger::before{top: 6px;}
-.hamburger::after{bottom: 6px;}
-
-/*cookie*/
-#cookiePopup{
-    background-color: inherit;
-    position: absolute;
-    font-size: 14px;
-    width: 70vw;
-    max-width: 42.85em;
-    box-shadow: 0 0 2em rgba(5,0,31,.15);
-    font-family: "Poppins",sans-serif;
-    text-align: justify;
-    line-height: 1.8em;
-    padding: 2em 1.4em;
-    border-radius: 6px;
-    transition: all 0.5s ease-in;
+.hamburger::before {
+    top: 6px;
 }
 
-#cookiePopup p{
-    text-align: center;
-    margin: 1.4em 0;
+.hamburger::after {
+    bottom: 6px;
 }
-#cookiePopup button{
-    background-color: var(--clr-accent);
-    border: none;
-    color: #fff;
-    font-size: 1.2em;
-    padding: 1em 1.4em;
-    display: block;
+
+
+
+/* Intro Section */
+.intro {
     position: relative;
-    margin: auto;
-    border-radius: 5px;
-    cursor: pointer;
-}
-#cookiePopup a{
-    color: var(--clr-accent);;
-}
-.hide{
-    visibility: hidden;
-    bottom: 0;
-    right: 2em;
+    
 }
 
-.show{
-    visibility: visible;
-    bottom: 2em;
-    right: 2em;
-}
-@media only screen and (max-width: 37.5em){
-    #cookiePopup{
-        width: 100%;
-    }
-    .hide{
-        bottom: 2em;
-        right: 0;
-    }
-    .show{
-        right: 0;
-        bottom: 0;
-    }
-}
-
-
-/* intro section */
-.intro{
-    position: relative;
-}
-.intro__img{
+.intro__img {
     box-shadow: var(--bs);
 }
-@media (min-width: 600px){
-    .intro{
+
+@media (min-width: 600px) {
+    .intro {
         display: grid;
         grid-column-gap: 1em;
         width: min-content;
         margin: 0 auto;
         grid-template-areas: 
-           "img title"
-           "img subtitle";
+            "img title"
+            "img subtitle";
         grid-template-columns: min-content max-content;
     }
-    .intro__img{
-       grid-area: img;
-       min-width: 250px;
-       position: relative;
-       z-index: 2;
 
+    .intro__img {
+        grid-area: img;
+        min-width: 250px;
+        position: relative;
+        z-index: 2;
     }
 
-    .section__subtitle--intro{
+    .section__subtitle--intro {
         align-self: start;
         grid-column: -1/1;
         grid-row: 2;
@@ -324,79 +292,86 @@ transform: translateX(0);
     }
 }
 
-
-/* My services section */
-
-.my-services{
-    background-color: var(--clr-dark);
-    background-image: url(../business2.jpg);
+/* My Services Section */
+.my-services {
+    background-color: var(--color-light);
     background-size: cover;
-    color: var(--clr-light);
+    color: var(--color-dark);
     text-align: center;
 }
-.section__title--services{
-    color: var(--clr-accent);
+
+.section__title--services {
+    color: var(--color-accent);
     position: relative;
 }
-.section__title--services::after{
-    content:'';
+
+.section__title--services::after {
+    content: '';
     display: block;
     width: 3em;
     height: 1px;
     margin: 0.5em auto 1em;
-    background: var(--clr-light);
+    background: var(--color-dark);
     opacity: 0.25;
+}
 
+.services {
+    margin-bottom: 4em;
 }
-.services{
-margin-bottom: 4em;
-}
-.service{
+
+.service {
     max-width: 500px;
     margin: 0 auto;
 }
-@media(min-width: 800px){
-    .services{
+
+@media (min-width: 800px) {
+    .services {
         display: flex;
         max-width: 1000px;
-        margin-right:  auto;
+        margin-right: auto;
         margin-left: auto;
     }
 
-
-    .service +.service{
+    .service + .service {
         margin-left: 2em;
     }
 }
 
 .about-me{
+    background-color: var(--color-dark);
+    color: var(--color-light);
+}
+
+.about-body {
     max-width: 1000px;
     margin: 0 auto;
 
 }
-.about-me__img{
+
+.about-me__img {
     box-shadow: var(--bs);
-    /*height: 100%;*/
 }
 
-@media(min-width: 600px){
-
-    .about-me{
+@media (min-width: 600px) {
+    .about-body {
         display: grid;
         grid-template-columns: 1fr 200px;
         grid-template-areas: 
-        "title img"
-        "subtitle img"
-        "text img";
+            "title img"
+            "subtitle img"
+            "text img";
         grid-column-gap: 2em;
     }
-    .about-me__img{
+
+    .about-me__img {
         box-shadow: var(--bs);
     }
-    .section__title--about{
+
+    .section__title--about {
         grid-area: title;
     }
-    .section__subtitle--about{
+
+    .section__subtitle--about {
         grid-column: 1 / -1;
         grid-row: 2;
         position: relative;
@@ -406,163 +381,158 @@ margin-bottom: 4em;
         padding-right: calc(200px + 4em);
     }
 
-    
-
-    .about-me__img{
-      grid-area: img;
-      position: relative;
-      z-index: 2;
+    .about-me__img {
+        grid-area: img;
+        position: relative;
+        z-index: 2;
     }
 }
 
-/* my work */
-
-.my-work{
-    background-color: var(--clr-dark);
-    color: var(--clr-light);
+/* My Work */
+.my-work {
+    background-color: var(--color-dark);
+    color: var(--color-light);
     text-align: center;
 }
 
-.portfolio{
+.portfolio {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  
-    
 }
-.portfolio__item{
-    background: var(--clr-accent);
+
+.portfolio__item {
+    background: var(--color-accent);
     overflow: hidden;
-
 }
 
-.portfolio__img{
+.portfolio__img {
     transition: 
-    transform 750ms cubic-bezier(.5, 0 ,.5, 1),
-    opacity 250ms linear;
-
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
 }
-.portfolio__item:focus{
+
+.portfolio__item:focus {
     position: relative;
     z-index: 2;
 }
 
 .portfolio__img:hover,
-.portfolio__item:focus .portfolio__img{
-    transform:scale(1.2);
+.portfolio__item:focus .portfolio__img {
+    transform: scale(1.2);
     opacity: .75;
 }
 
-/*footer*/
-.footer{
+/* Footer */
+.footer {
     background: #111;
-    color: var(--clr-accent);
+    color: var(--color-accent);
     text-align: center;
     padding: 2.5em 0;
     font-size: var(--fs-h3);
-
 }
 
-.footer a{
+.footer a {
     color: inherit;
     text-decoration: none;
 }
 
-.footer__link{
+.footer__link {
     font-weight: var(--fw-bold);
 }
 
 .footer__link:hover,
-.social-list__link:hover{
+.social-list__link:hover {
     opacity: .7;
 }
 
-.footer__link:hover{
+.footer__link:hover {
     text-decoration: underline;
 }
 
-.social-list{
+.social-list {
     list-style: none;
     display: flex;
     justify-content: center;
     margin: 2em 0 0;
     padding: 0;
 }
-.social-list__item{
-    margin: 0 .5em
+
+.social-list__item {
+    margin: 0 .5em;
 }
-.social-list__link{
+
+.social-list__link {
     padding: .5em;
 }
 
-/* individual portfolio item styles */
-
-.portfolio-item-individual{
+/* Individual Portfolio Item Styles */
+.portfolio-item-individual {
     padding: 0 2em 2em;
     max-width: 1000px;
     margin: 0 auto;
 }
 
-.portfolio-item-individual p{
+.portfolio-item-individual p {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
-.portfolio-item-individual img{
-    margin-left:  auto;
+
+.portfolio-item-individual img {
+    margin-left: auto;
     margin-right: auto;
-
-   
 }
 
-
-/*dark them*/
-body.dark-theme{
-   
-
-    --clr-light:#303030;;
-    --clr-dark:#fff; 
-    --clr-accent: #16e0be;
-   
+/* Dark Theme */
+body.dark-theme {
+    --color-light: var(--color-dark-theme-light);
+    --color-dark: var(--color-dark-theme-dark);
+    --color-accent: var(--color-dark-theme-accent);
 }
-.darkmode{
+
+.darkmode {
     display: fixed;
     align-items: left;
 }
-.change-theme{
+
+.change-theme {
     font-size: 1.5rem;
     margin-right: 5.5rem;
     cursor: pointer;
 }
+
 .btn-con {
     display: flex;
     align-self: flex-start;
-  }
-  
-  .main-btn {
+}
+
+.main-btn {
     border-radius: 30px;
     color: inherit;
     font-weight: 600;
     position: relative;
-    border: 1px solid var(--clr-accent);
+    border: 1px solid var(--color-accent);
     display: flex;
     align-self: flex-start;
     align-items: center;
     overflow: hidden;
     text-decoration: none;
+}
 
-  }
-  .main-btn .btn-text {
+.main-btn .btn-text {
     padding: 0 2rem;
-  }
-  .main-btn .btn-icon {
-    background-color: var(--clr-accent);
+}
+
+.main-btn .btn-icon {
+    background-color: var(--color-accent);
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
     padding: 1rem;
-  }
-  .main-btn::before {
+}
+
+.main-btn::before {
     content: '';
     position: absolute;
     top: 0;
@@ -570,14 +540,16 @@ body.dark-theme{
     transform: translateX(100%);
     transition: all 0.4s ease-in;
     z-index: -1;
-  }
-  .main-btn:hover {
+}
+
+.main-btn:hover {
     transition: all 0.4s ease-in;
-  }
-  .main-btn:hover::before {
+}
+
+.main-btn:hover::before {
     width: 100%;
     height: 100%;
-    background-color: var(--clr-accent);
+    background-color: var(--color-accent);
     transform: translateX(0);
     transition: all 0.4s ease-in;
-  }
+}
