--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,9 @@
     --fw-bold: 900;
 
     --fs-h1: 3rem;
-    --fs-h2: 2.25rem;
-    --fs-h3: 1.25rem;
-    --fs-body: 1rem;
+    --fs-h2: 7.25rem;
+    --fs-h3: 3.25rem;
+    --fs-body: 3rem;
 
     --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, .25),
         0.125em 0.125em 0.25em rgba(0, 0, 0, .15);
@@ -35,8 +35,8 @@
     :root {
         --fs-h1: 4.5rem;
         --fs-h2: 3.75rem;
-        --fs-h3: 1.5rem;
-        --fs-body: 1.125rem;
+        --fs-h3: 1.9rem;
+        --fs-body: 1.35em;
     }
 }
 
