--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ img {
     max-width: 100%;
 }
 
+.portfolio img {
+    height: 400px;
+    width: 600px;
+}
 strong {
     font-weight: var(--fw-bold);
 }
@@ -430,7 +434,9 @@ header {
     padding: 2.5em 0;
     font-size: var(--fs-h3);
 }
-
+.footer p{
+    font-size: 20px;
+}
 .footer a {
     color: inherit;
     text-decoration: none;
